# zazencodes-season-2

./: .gitignore  README.md
src/ai-eng-tier-lists/startups/: download_emojis.py  render_slides.sh  startups_tier_list.html  startups_tier_list.md
src/ai-scientific-research-agent/: DEVLOG.md  README.md  requirements.txt  setup.py
src/ai-scientific-research-agent/dev/: dev_human_review.py  dev_weather_example.py  test_latex.py
src/ai-scientific-research-agent/notebooks/: dev.ipynb
src/ai-scientific-research-agent/output/: paper_20250204_172622.tex  paper_20250205_083713.tex
src/ai-scientific-research-agent/sci_research_agent/: __main__.py  arxiv.py  latex.py  logging_config.py  pdf.py  workflow_1.py  workflow_2.py
src/anatomy-of-a-system-prompt/: README.md  anatomy_of_a_system_prompt.html  anatomy_of_a_system_prompt.md  chad_gpt_system_prompt.md  chad_gpt_user_questions.md  render_slides.sh
src/claude-code-sub-agents/anime-quote-fetcher/: anime_quotes.py  example_anime_list.json  pyproject.toml  run_example.py
src/claude-code-sub-agents/anime-quote-fetcher/results/: 2025-07-27_17-23-05_anime_quotes.json
src/claude-code-sub-agents/dracula-style-plots/: box_muller_visualization.py
src/claude-code-sub-agents/plant-helper-mcp/: CHANGELOG.md  README.md  pyproject.toml
src/claude-code-sub-agents/plant-helper-mcp/src/plant_helper_mcp/: __init__.py  server.py  tools.py  utils.py
src/data-jobs-2025/: job_tables.md  jobs_hierarchy.md
src/deepseek-ollama/: README.md  favorites.json  test.py
src/discord-ai-bot-trivia-greetings/: .dockerignore  .env.demo  Dockerfile  README.md  main.py  requirements.txt  test_add_user.py  test_send_message.py
src/dspy-tutorial-5-real-world-use-cases/: 01_structured_output.py  02_chain_of_thought.py  03_rag_hr_bot.py  04_react_expense_assistant.py  05_self_improving_rag.py  README.md  prompt.txt  requirements.txt
src/dspy-tutorial-5-real-world-use-cases/advanced/: 01_structured_output.py  02_chain_of_thought.py  03_rag_hr_bot.py  04_react_expense_assistant.py  05_self_improving_rag.py  LESSON_AUDIT.md  README.md
src/dspy-tutorial-5-real-world-use-cases/diagrams/: 01_structured_output.mermaid  02_chain_of_thought.mermaid  03_rag_hr_bot.mermaid  04_react_expense_assistant.mermaid  05_self_improving_rag.mermaid  prompt.txt
src/fast-agent/1-basic/: agent.py
src/fast-agent/2-parallel/: agent.py
src/fast-agent/3-workflows/: README.md
src/fastmcp-tutorial/: LICENSE  PACKAGE_SUMMARY.md  PUBLISHING.md  README.md  main.py  pyproject.toml  test_server.py
src/fastmcp-tutorial/src/fastmcp_tutorial/: __init__.py  cli.py  test.py
src/gemma3-ollama/: README.md  quote_app_prompt.txt
src/gemma3-ollama/gemma3-12b-quotes-app/: index.html
src/gemma3-ollama/gemma3-1b-quotes-app/: index.html
src/gemma3-ollama/gemma3-27b-quotes-app/: index.html
src/gemma3-ollama/gemma3-4b-quotes-app/: index.html
src/gitingest-terminal-guide/: digest.txt
src/gpt-4.5-vs-claude-3.7-head-to-head/: README.md  package-lock.json  package.json  requirements.txt  server.js
src/gpt-4.5-vs-claude-3.7-head-to-head/public/: index.html
src/gpt-5/: gpt_5_new_params_and_tools.ipynb
src/jupyter-notebook-cursor-analytics/japan-trade-statistics/: explore_database.py  generate_trade_analysis_notebook.py  trade_analysis_ym_2018.ipynb  trade_analysis_ym_2019.ipynb  trade_analysis_ym_2020.ipynb
src/mcp-elicitation/book-buy-demo-mcp/: server.py
src/mcp-progress-and-logging/: README.md  vegan_recipe_requests.csv
src/mcp-progress-and-logging/agent/: agent.py  fastagent.config.yaml  fastagent.jsonl
src/mcp-progress-and-logging/vegan-recipes-mcp/: server.py
src/mcp-sampling/: README.md
src/mcp-sampling/agent/: agent.py  fastagent.config.yaml  fastagent.jsonl
src/mcp-sampling/csv-quick-plotter/: server.py
src/mcp-server-analysis/: workbook.ipynb
src/mcphub/: zc_season_2_git.json
src/neovim-ai-data-eng-tricks/: 10_demo.py  11_demo.csv  11_demo.md  12_demo.py  1_demo.py  2_query.sql  3_demo.py  4_demo.py  5_demo_test.py  6_demo.py  7_demo.md  8_demo.json  8_demo.md  8_demo_formatted.json  9_demo.md  DEVLOG.md  README.md  airflow.py  demo_5.py  more-tricks.md  sql_regex_merge.sql  tricks.md
src/obsidian-mcp/: README.md  futile.json  generate_system_prompt_json.py  z5k.json
src/obsidian-mcp/system_prompts/: snippet_harvester.json  snippet_harvester.md
src/perplexity-system-prompt/: README.md
src/rise-of-the-ai-engineer/: ai_eng_job_posting_scrape_summary.md  render_slides.sh
src/supabase-mcp/: index.html  package-lock.json  package.json  tsconfig.json
src/supabase-mcp-cline/: .gitignore  LICENSE  README.md  index.html
src/supabase-mcp-cline/css/: styles.css
src/supabase-mcp-cline/js/: app.js  config.js  openai-config.js
src/supabase-mcp-cline/migrations/: 001_initial_schema.sql
src/supabase-mcp-cline/public/: demo.html
src/supabase-mcp/.cursor/: mcp.json
src/supabase-mcp/src/: App.tsx
src/terminal-llm-tricks/: README.md  app.py  ml_script.py  ml_script_documented.py  ml_script_messy.py  py2_migrated.py  py2_script.py
src/testsprite-mcp/news-data-mcp-website/: .env.example  .gitignore  README.md  app_overview.md  middleware.ts  package-lock.json  package.json  prd.md
src/trip-mapper/1-ollama/: index.html
src/trip-mapper/3-youware/: README.md  YOUWARE.md  index.html  (+2 more)
(+79 files in other folders)
