[project]
name = "anime-quote-fetcher"
version = "0.1.0"
description = "Fetch anime quotes from animechan.io API"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]
requires-python = ">=3.8"

[project.scripts]
anime-quotes = "anime_quotes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
