[project]
name = "plant-helper-mcp"
version = "0.1.0"
description = "Plant care assistant utilities exposed via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Plant Helper MCP", email = "plant-helper@example.com"}
]
keywords = ["plant", "care", "gardening", "watering", "light", "health", "monitoring", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0"
]

[project.urls]
Homepage = "https://github.com/example/plant-helper-mcp"
Repository = "https://github.com/example/plant-helper-mcp"
Issues = "https://github.com/example/plant-helper-mcp/issues"

[project.scripts]
plant-helper-mcp = "plant_helper_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plant_helper_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - allow in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",  
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]